update colors add table headers fix z-index issue on chart on smaller devices

--- a/src/index.css
+++ b/src/index.css
@@ -5,24 +5,24 @@
 @layer base {
     :root {
         --background: 0 0% 100%;
-        --foreground: 222.2 47.4% 11.2%;
-        --muted: 210 40% 96.1%;
-        --muted-foreground: 215.4 16.3% 46.9%;
+        --foreground: 24deg 9.8% 10%;
+        --muted: 60deg 4.76% 95.88%;
+        --muted-foreground: 25deg 5.26% 44.71%;
         --popover: 0 0% 100%;
-        --popover-foreground: 222.2 47.4% 11.2%;
-        --border: 214.3 31.8% 91.4%;
-        --input: 214.3 31.8% 91.4%;
+        --popover-foreground: 24deg 9.8% 10%;
+        --border: 20deg 5.88% 90%;
+        --input: 20deg 5.88% 90%;
         --card: 0 0% 100%;
-        --card-foreground: 222.2 47.4% 11.2%;
-        --primary: 222.2 47.4% 11.2%;
-        --primary-foreground: 210 40% 98%;
-        --secondary: 210 40% 96.1%;
-        --secondary-foreground: 222.2 47.4% 11.2%;
-        --accent: 210 40% 96.1%;
-        --accent-foreground: 222.2 47.4% 11.2%;
+        --card-foreground: 24deg 9.8% 10%;
+        --primary: 24deg 9.8% 10%;
+        --primary-foreground: 60 9.1% 97.8%;
+        --secondary: 60deg 4.76% 95.88%;
+        --secondary-foreground: 24deg 9.8% 10%;
+        --accent: 60deg 4.76% 95.88%;
+        --accent-foreground: 24deg 9.8% 10%;
         --destructive: 0 100% 50%;
-        --destructive-foreground: 210 40% 98%;
-        --ring: 215 20.2% 65.1%;
+        --destructive-foreground: 60 9.1% 97.8%;
+        --ring: 24 5.4% 63.9%;
         --radius: 0.5rem;
     }
 
